1.8.0/_sources/examples_built/fiber_tracking/tracking_deterministic.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples_built\fiber_tracking\tracking_deterministic.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_built_fiber_tracking_tracking_deterministic.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_built_fiber_tracking_tracking_deterministic.py:


=============================================================
An introduction to the Deterministic Maximum Direction Getter
=============================================================

Deterministic maximum direction getter is the deterministic version of the
probabilistic direction getter. It can be used with the same local models
and has the same parameters. Deterministic maximum fiber tracking follows
the trajectory of the most probable pathway within the tracking constraint
(e.g. max angle). In other words, it follows the direction with the highest
probability from a distribution, as opposed to the probabilistic direction
getter which draws the direction from the distribution. Therefore, the maximum
deterministic direction getter is equivalent to the probabilistic direction
getter returning always the maximum value of the distribution.

Deterministic maximum fiber tracking is an alternative to EuDX deterministic
tractography and unlike EuDX does not follow the peaks of the local models but
uses the entire orientation distributions.

This example is an extension of the
:ref:`sphx_glr_examples_built_fiber_tracking_tracking_probabilistic.py`
example. We begin by loading the data, fitting a Constrained Spherical
Deconvolution (CSD) reconstruction model for the tractography and fitting
the constant solid angle (CSA) reconstruction model to define the tracking
mask (stopping criterion).

.. GENERATED FROM PYTHON SOURCE LINES 27-69

.. code-block:: Python


    from dipy.core.gradients import gradient_table
    from dipy.data import default_sphere, get_fnames
    from dipy.direction import DeterministicMaximumDirectionGetter
    from dipy.io.gradients import read_bvals_bvecs
    from dipy.io.image import load_nifti, load_nifti_data
    from dipy.io.stateful_tractogram import Space, StatefulTractogram
    from dipy.io.streamline import save_trk
    from dipy.reconst.csdeconv import (ConstrainedSphericalDeconvModel,
                                       auto_response_ssst)
    from dipy.reconst.shm import CsaOdfModel
    from dipy.tracking import utils
    from dipy.tracking.local_tracking import LocalTracking
    from dipy.tracking.stopping_criterion import ThresholdStoppingCriterion
    from dipy.tracking.streamline import Streamlines
    from dipy.viz import window, actor, colormap, has_fury

    # Enables/disables interactive visualization
    interactive = False


    hardi_fname, hardi_bval_fname, hardi_bvec_fname = get_fnames('stanford_hardi')
    label_fname = get_fnames('stanford_labels')

    data, affine, hardi_img = load_nifti(hardi_fname, return_img=True)
    labels = load_nifti_data(label_fname)
    bvals, bvecs = read_bvals_bvecs(hardi_bval_fname, hardi_bvec_fname)
    gtab = gradient_table(bvals, bvecs)

    seed_mask = labels == 2
    white_matter = (labels == 1) | (labels == 2)
    seeds = utils.seeds_from_mask(seed_mask, affine, density=1)

    response, ratio = auto_response_ssst(gtab, data, roi_radii=10, fa_thr=0.7)

    csd_model = ConstrainedSphericalDeconvModel(gtab, response, sh_order=6)
    csd_fit = csd_model.fit(data, mask=white_matter)

    csa_model = CsaOdfModel(gtab, sh_order=6)
    gfa = csa_model.fit(data, mask=white_matter).gfa
    stopping_criterion = ThresholdStoppingCriterion(gfa, .25)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

      0%|                                                                                                                            | 0/58788 [00:00<?, ?it/s]      0%|▍                                                                                                               | 262/58788 [00:00<00:22, 2598.66it/s]      1%|█▍                                                                                                              | 726/58788 [00:00<00:15, 3776.52it/s]      2%|██▎                                                                                                            | 1250/58788 [00:00<00:12, 4427.44it/s]      3%|███▌                                                                                                           | 1871/58788 [00:00<00:11, 5114.42it/s]      4%|████▉                                                                                                          | 2599/58788 [00:00<00:09, 5868.97it/s]      5%|██████                                                                                                         | 3186/58788 [00:00<00:10, 5520.29it/s]      6%|███████                                                                                                        | 3742/58788 [00:00<00:10, 5483.11it/s]      7%|████████                                                                                                       | 4303/58788 [00:00<00:09, 5511.47it/s]      8%|█████████▏                                                                                                     | 4856/58788 [00:00<00:10, 5337.81it/s]      9%|██████████▏                                                                                                    | 5392/58788 [00:01<00:11, 4765.59it/s]     10%|███████████▏                                                                                                   | 5897/58788 [00:01<00:10, 4834.43it/s]     11%|████████████                                                                                                   | 6412/58788 [00:01<00:10, 4913.75it/s]     12%|█████████████                                                                                                  | 6938/58788 [00:01<00:10, 5001.40it/s]     13%|██████████████                                                                                                 | 7469/58788 [00:01<00:10, 5078.15it/s]     14%|███████████████▎                                                                                               | 8134/58788 [00:01<00:09, 5530.42it/s]     15%|████████████████▍                                                                                              | 8691/58788 [00:01<00:09, 5112.77it/s]     16%|█████████████████▌                                                                                             | 9308/58788 [00:01<00:09, 5396.56it/s]     17%|██████████████████▌                                                                                            | 9856/58788 [00:01<00:09, 5381.47it/s]     18%|███████████████████▍                                                                                          | 10400/58788 [00:02<00:09, 5089.86it/s]     19%|████████████████████▍                                                                                         | 10939/58788 [00:02<00:09, 5161.31it/s]     20%|█████████████████████▌                                                                                        | 11533/58788 [00:02<00:08, 5382.63it/s]     21%|██████████████████████▉                                                                                       | 12269/58788 [00:02<00:07, 5926.44it/s]     22%|████████████████████████                                                                                      | 12867/58788 [00:02<00:07, 5763.54it/s]     23%|█████████████████████████▏                                                                                    | 13492/58788 [00:02<00:07, 5892.85it/s]     24%|██████████████████████████▎                                                                                   | 14085/58788 [00:02<00:07, 5891.29it/s]     25%|███████████████████████████▍                                                                                  | 14677/58788 [00:02<00:07, 5560.37it/s]     26%|████████████████████████████▌                                                                                 | 15238/58788 [00:02<00:08, 5412.43it/s]     27%|█████████████████████████████▌                                                                                | 15783/58788 [00:02<00:07, 5413.20it/s]     28%|██████████████████████████████▋                                                                               | 16397/58788 [00:03<00:07, 5612.03it/s]     29%|███████████████████████████████▊                                                                              | 16984/58788 [00:03<00:07, 5676.34it/s]     30%|████████████████████████████████▊                                                                             | 17554/58788 [00:03<00:07, 5673.34it/s]     31%|█████████████████████████████████▉                                                                            | 18123/58788 [00:03<00:07, 5667.82it/s]     32%|██████████████████████████████████▉                                                                           | 18691/58788 [00:03<00:07, 5529.42it/s]     33%|████████████████████████████████████                                                                          | 19269/58788 [00:03<00:07, 5588.91it/s]     34%|█████████████████████████████████████▏                                                                        | 19881/58788 [00:03<00:06, 5736.50it/s]     35%|██████████████████████████████████████▎                                                                       | 20500/58788 [00:03<00:06, 5856.76it/s]     36%|███████████████████████████████████████▍                                                                      | 21087/58788 [00:03<00:06, 5645.78it/s]     37%|████████████████████████████████████████▋                                                                     | 21717/58788 [00:04<00:06, 5821.54it/s]     38%|█████████████████████████████████████████▋                                                                    | 22302/58788 [00:04<00:06, 5655.89it/s]     39%|██████████████████████████████████████████▊                                                                   | 22870/58788 [00:04<00:06, 5654.51it/s]     40%|████████████████████████████████████████████                                                                  | 23534/58788 [00:04<00:05, 5931.30it/s]     41%|█████████████████████████████████████████████▏                                                                | 24129/58788 [00:04<00:05, 5921.96it/s]     42%|██████████████████████████████████████████████▎                                                               | 24723/58788 [00:04<00:06, 5581.36it/s]     43%|███████████████████████████████████████████████▎                                                              | 25286/58788 [00:04<00:06, 5430.83it/s]     44%|████████████████████████████████████████████████▎                                                             | 25833/58788 [00:04<00:06, 5431.23it/s]     45%|█████████████████████████████████████████████████▌                                                            | 26488/58788 [00:04<00:05, 5741.95it/s]     46%|██████████████████████████████████████████████████▋                                                           | 27066/58788 [00:04<00:05, 5739.60it/s]     47%|███████████████████████████████████████████████████▋                                                          | 27642/58788 [00:05<00:05, 5729.61it/s]     48%|████████████████████████████████████████████████████▉                                                         | 28276/58788 [00:05<00:05, 5896.52it/s]     49%|██████████████████████████████████████████████████████                                                        | 28867/58788 [00:05<00:05, 5287.08it/s]     50%|███████████████████████████████████████████████████████                                                       | 29408/58788 [00:05<00:05, 5139.37it/s]     51%|████████████████████████████████████████████████████████                                                      | 29931/58788 [00:05<00:05, 5156.07it/s]     52%|█████████████████████████████████████████████████████████▎                                                    | 30617/58788 [00:05<00:05, 5625.23it/s]     53%|██████████████████████████████████████████████████████████▎                                                   | 31187/58788 [00:05<00:05, 5219.39it/s]     54%|███████████████████████████████████████████████████████████▌                                                  | 31856/58788 [00:05<00:04, 5609.71it/s]     55%|████████████████████████████████████████████████████████████▋                                                 | 32428/58788 [00:05<00:04, 5596.07it/s]     56%|█████████████████████████████████████████████████████████████▋                                                | 32995/58788 [00:06<00:04, 5605.31it/s]     57%|██████████████████████████████████████████████████████████████▊                                               | 33590/58788 [00:06<00:04, 5691.41it/s]     58%|███████████████████████████████████████████████████████████████▉                                              | 34163/58788 [00:06<00:04, 5691.88it/s]     59%|████████████████████████████████████████████████████████████████▉                                             | 34735/58788 [00:06<00:04, 5522.59it/s]     60%|██████████████████████████████████████████████████████████████████                                            | 35290/58788 [00:06<00:04, 5213.90it/s]     61%|███████████████████████████████████████████████████████████████████                                           | 35817/58788 [00:06<00:04, 5219.92it/s]     62%|████████████████████████████████████████████████████████████████████                                          | 36401/58788 [00:06<00:04, 5383.39it/s]     63%|█████████████████████████████████████████████████████████████████████▏                                        | 36950/58788 [00:06<00:04, 5402.52it/s]     64%|██████████████████████████████████████████████████████████████████████▏                                       | 37520/58788 [00:06<00:03, 5475.03it/s]     65%|███████████████████████████████████████████████████████████████████████▏                                      | 38070/58788 [00:06<00:03, 5469.41it/s]     66%|████████████████████████████████████████████████████████████████████████▍                                     | 38704/58788 [00:07<00:03, 5711.63it/s]     67%|█████████████████████████████████████████████████████████████████████████▍                                    | 39277/58788 [00:07<00:03, 5701.10it/s]     68%|██████████████████████████████████████████████████████████████████████████▊                                   | 39974/58788 [00:07<00:03, 6064.74it/s]     69%|███████████████████████████████████████████████████████████████████████████▉                                  | 40582/58788 [00:07<00:03, 6058.05it/s]     70%|█████████████████████████████████████████████████████████████████████████████                                 | 41189/58788 [00:07<00:03, 5738.68it/s]     71%|██████████████████████████████████████████████████████████████████████████████▏                               | 41817/58788 [00:07<00:02, 5875.15it/s]     72%|███████████████████████████████████████████████████████████████████████████████▎                              | 42408/58788 [00:07<00:02, 5838.45it/s]     73%|████████████████████████████████████████████████████████████████████████████████▋                             | 43130/58788 [00:07<00:02, 6225.35it/s]     74%|█████████████████████████████████████████████████████████████████████████████████▊                            | 43755/58788 [00:07<00:02, 6219.28it/s]     75%|███████████████████████████████████████████████████████████████████████████████████                           | 44379/58788 [00:08<00:02, 5552.70it/s]     77%|████████████████████████████████████████████████████████████████████████████████████▍                         | 45099/58788 [00:08<00:02, 5988.94it/s]     78%|█████████████████████████████████████████████████████████████████████████████████████▌                        | 45712/58788 [00:08<00:02, 5544.87it/s]     79%|██████████████████████████████████████████████████████████████████████████████████████▌                       | 46282/58788 [00:08<00:02, 5317.57it/s]     80%|███████████████████████████████████████████████████████████████████████████████████████▌                      | 46825/58788 [00:08<00:02, 5168.96it/s]     81%|████████████████████████████████████████████████████████████████████████████████████████▌                     | 47349/58788 [00:08<00:02, 5040.14it/s]     81%|█████████████████████████████████████████████████████████████████████████████████████████▌                    | 47858/58788 [00:08<00:02, 5045.32it/s]     82%|██████████████████████████████████████████████████████████████████████████████████████████▌                   | 48400/58788 [00:08<00:02, 5141.28it/s]     83%|███████████████████████████████████████████████████████████████████████████████████████████▋                  | 49002/58788 [00:08<00:01, 5382.66it/s]     84%|████████████████████████████████████████████████████████████████████████████████████████████▊                 | 49632/58788 [00:09<00:01, 5635.66it/s]     86%|██████████████████████████████████████████████████████████████████████████████████████████████▏               | 50307/58788 [00:09<00:01, 5947.49it/s]     87%|███████████████████████████████████████████████████████████████████████████████████████████████▎              | 50965/58788 [00:09<00:01, 6118.92it/s]     88%|████████████████████████████████████████████████████████████████████████████████████████████████▌             | 51580/58788 [00:09<00:01, 5937.51it/s]     89%|█████████████████████████████████████████████████████████████████████████████████████████████████▋            | 52177/58788 [00:09<00:01, 5459.54it/s]     90%|██████████████████████████████████████████████████████████████████████████████████████████████████▊           | 52785/58788 [00:09<00:01, 5618.61it/s]     91%|███████████████████████████████████████████████████████████████████████████████████████████████████▊          | 53355/58788 [00:09<00:00, 5619.40it/s]     92%|████████████████████████████████████████████████████████████████████████████████████████████████████▉         | 53964/58788 [00:09<00:00, 5631.30it/s]     93%|██████████████████████████████████████████████████████████████████████████████████████████████████████        | 54531/58788 [00:09<00:00, 5597.27it/s]     94%|███████████████████████████████████████████████████████████████████████████████████████████████████████       | 55094/58788 [00:09<00:00, 5437.73it/s]     95%|████████████████████████████████████████████████████████████████████████████████████████████████████████▏     | 55673/58788 [00:10<00:00, 5527.03it/s]     96%|█████████████████████████████████████████████████████████████████████████████████████████████████████████▏    | 56228/58788 [00:10<00:00, 5405.72it/s]     97%|██████████████████████████████████████████████████████████████████████████████████████████████████████████▏   | 56771/58788 [00:10<00:00, 5065.93it/s]     97%|███████████████████████████████████████████████████████████████████████████████████████████████████████████▏  | 57283/58788 [00:10<00:00, 4679.26it/s]     98%|████████████████████████████████████████████████████████████████████████████████████████████████████████████▏ | 57823/58788 [00:10<00:00, 4865.02it/s]     99%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████▏| 58387/58788 [00:10<00:00, 5070.83it/s]    100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████| 58788/58788 [00:10<00:00, 5459.62it/s]




.. GENERATED FROM PYTHON SOURCE LINES 70-76

The Fiber Orientation Distribution (FOD) of the CSD model estimates the
distribution of small fiber bundles within each voxel. This distribution
can be used for deterministic fiber tracking. As for probabilistic tracking,
there are many ways to provide those distributions to the deterministic
maximum direction getter. Here, the spherical harmonic representation of
the FOD is used.

.. GENERATED FROM PYTHON SOURCE LINES 76-94

.. code-block:: Python


    detmax_dg = DeterministicMaximumDirectionGetter.from_shcoeff(
        csd_fit.shm_coeff, max_angle=30., sphere=default_sphere, sh_to_pmf=True)
    streamline_generator = LocalTracking(detmax_dg, stopping_criterion, seeds,
                                         affine, step_size=.5)
    streamlines = Streamlines(streamline_generator)

    sft = StatefulTractogram(streamlines, hardi_img, Space.RASMM)
    save_trk(sft, "tractogram_deterministic_dg.trk")

    if has_fury:
        scene = window.Scene()
        scene.add(actor.line(streamlines, colormap.line_colors(streamlines)))
        window.record(scene, out_path='tractogram_deterministic_dg.png',
                      size=(800, 800))
        if interactive:
            window.show(scene)




.. image-sg:: /examples_built/fiber_tracking/images/sphx_glr_tracking_deterministic_001.png
   :alt: tracking deterministic
   :srcset: /examples_built/fiber_tracking/images/sphx_glr_tracking_deterministic_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 95-98

.. rst-class:: centered small fst-italic fw-semibold

Corpus Callosum using deterministic maximum direction getter

.. GENERATED FROM PYTHON SOURCE LINES 100-102

.. include:: ../../links_names.inc



.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 25.383 seconds)


.. _sphx_glr_download_examples_built_fiber_tracking_tracking_deterministic.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: tracking_deterministic.ipynb <tracking_deterministic.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: tracking_deterministic.py <tracking_deterministic.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
